Fix 'About Me' section overflowing in mobile

--- a/public/src/styles.css
+++ b/public/src/styles.css
@@ -11,7 +11,8 @@
     font-weight: bold;
 }
 .summary {
-    width: 750px;
+    width: 100%;
+    max-width: 750px;
     margin: auto;
 }
 h1{
@@ -108,6 +109,8 @@ ul {
 }
 
 .jerseys {
+    width: 100%;
+    max-width: 750px;
     margin: 10px auto;
 }
 
